feat: added background image

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <section class="login">
+            <img src="./assets/background.jpg" alt="backgound image" />
             <div class="container">
                 <h1>Login</h1>
                 <span>Welcome back. Please login to your account!</span>
