feat: remember div input added

--- a/src/index.html
+++ b/src/index.html
@@ -20,17 +20,19 @@
                     <input type="password" name="password" />
 
                     <div class="login__rememberDiv">
-                        <label for="remeber">Remember me</label>
-                        <input type="checkbox" name="remeber" />
+                        <div class="login__rememberDiv--input">
+                            <label for="remeber">Remember me</label>
+                            <input type="checkbox" name="remeber" />
+                        </div>
 
                         <a href="">Forgot password?</a>
                     </div>
 
                     <button type="submit">Login</button>
 
-                    <span class="sign--text"
+                    <span class="sign__text"
                         >Don't have an account?
-                        <span class="sign--text__link">Signup</span></span
+                        <span class="sign__text--link">Signup</span></span
                     >
                 </form>
             </div>
